--- a/src/main/resources/templates/sbu/jsf/show-edit-only.html
+++ b/src/main/resources/templates/sbu/jsf/show-edit-only.html
@@ -1,48 +1,51 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5"
-  th:with="attachmentDialog=${attachmentDialog} ?: false, _historyBack=${_historyBack} ?: false, jsfTheme=${jsfTheme}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, user=${__${'@' + @webModelAttributes.USER_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId}, backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}"
-  class="card">
-  <div class="card-header">
-    <div class="d-flex justify-content-end">
-      <a th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
-        hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
-        hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
-        data-bs-toggle="modal"
-        th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
-        class="pe-2 text-success hint--left">
-        <i class="fas fa-paperclip"></i>
-      </a>
-      <!-- Keep the header height even if the edit icon is hidden  -->
-      <i class="fa fa-fw" style="visibility: hidden;"></i>
-      <a th:if="${user == null || user.canUpdate(item)}" class="pe-2 orange"
-        hx:get="@{${item.getEditPath(queryConfig)}(_historyBack=${_historyBack}, jsfTheme=${jsfTheme}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${backTargetId}, __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__=${backPath})}"
-        hx-push-url="true" hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
-        <i class="fas fa-edit"></i></a>
-    </div>
-  </div>
-  <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
-    <react-form th:id="${'showEditForm' + rid}" th:action="@{${item.getBackPath(queryConfig)}}"
-      method="GET" ajax:target="${ajaxTargetId}" disabled="true" th:attr="theme=${jsfTheme}">
-      <div></div>
-    </react-form>
+<div th:fragment="bs5" class="card" th:insert="~{sbu/jsf/block :: scope(~{:: th:block})}">
+  <th:block>
 
-    <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
-      th:id="${'attachments' + rid}">
-      <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
-        hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load" class="d-none"></a>
+    <div class="card-header">
+      <div class="d-flex justify-content-end">
+        <a th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+          hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
+          hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
+          data-bs-toggle="modal"
+          th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
+          class="pe-2 text-success hint--left">
+          <i class="fas fa-paperclip"></i>
+        </a>
+        <!-- Keep the header height even if the edit icon is hidden  -->
+        <i class="fa fa-fw" style="visibility: hidden;"></i>
+        <a th:if="${user == null || user.canUpdate(item)}" class="pe-2 orange"
+          hx:get="@{${item.getEditPath(queryConfig)}(_historyBack=${_historyBack}, jsfTheme=${jsfTheme}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${backTargetId}, __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__=${backPath})}"
+          hx-push-url="true" hx:target="${'#' + ajaxTargetId}" hx-ext="json-enc">
+          <i class="fas fa-edit"></i></a>
+      </div>
     </div>
+    <div class="card-body">
+      <react-form th:id="${'showEditForm' + rid}" th:action="@{${item.getBackPath(queryConfig)}}"
+        method="GET" ajax:target="${ajaxTargetId}" disabled="true" th:attr="theme=${jsfTheme}">
+        <div></div>
+      </react-form>
 
-    <script th:inline="javascript">
-      window['showEditFormDataset' + /*[[${rid}]]*/ 0] = /*[[${item.toDataset()}]]*/ null;
-      var showEditFormId = /*[[${'showEditForm' + rid}]]*/ null;
-      var showEditForm = document.getElementById(showEditFormId);
-      showEditForm.setAttribute('props-var', 'showEditFormDataset' + /*[[${rid}]]*/ 0);
+      <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+        th:id="${'attachments' + rid}">
+        <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
+          hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load"
+          class="d-none"></a>
+      </div>
+
+      <script th:inline="javascript">
+        window['showEditFormDataset' + /*[[${rid}]]*/ 0] = /*[[${item.toDataset()}]]*/ null;
+        var showEditFormId = /*[[${'showEditForm' + rid}]]*/ null;
+        var showEditForm = document.getElementById(showEditFormId);
+        showEditForm.setAttribute('props-var', 'showEditFormDataset' + /*[[${rid}]]*/ 0);
+      </script>
+    </div>
+    <script th:inline="javascript" defer>
+      htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
     </script>
-  </div>
-  <script th:inline="javascript" defer>
-    htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
-  </script>
+
+  </th:block>
 </div>
 
 </html>
