--- a/src/main/resources/templates/sbu/jsf/show-only.html
+++ b/src/main/resources/templates/sbu/jsf/show-only.html
@@ -1,41 +1,44 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5"
-  th:with="attachmentDialog=${attachmentDialog} ?: false, jsfTheme=${jsfTheme}, item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}"
-  class="card">
-  <div th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
-    class="card-header">
-    <div class="d-flex">
-      <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
-        hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
-        data-bs-toggle="modal"
-        th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
-        class="pe-2 text-success hint--left">
-        <i class="fas fa-paperclip"></i>
-      </a>
-    </div>
-  </div>
-  <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
-    <react-form th:id="${'showForm' + rid}" disabled="true" th:attr="theme=${jsfTheme}">
-      <div></div>
-    </react-form>
+<div th:fragment="bs5" class="card" th:insert="~{sbu/jsf/block :: scope(~{:: th:block})}">
+  <th:block>
 
-    <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
-      th:id="${'attachments' + rid}">
-      <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
-        hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load" class="d-none"></a>
+    <div th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+      class="card-header">
+      <div class="d-flex">
+        <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
+          hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
+          data-bs-toggle="modal"
+          th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
+          class="pe-2 text-success hint--left">
+          <i class="fas fa-paperclip"></i>
+        </a>
+      </div>
     </div>
+    <div class="card-body">
+      <react-form th:id="${'showForm' + rid}" disabled="true" th:attr="theme=${jsfTheme}">
+        <div></div>
+      </react-form>
 
-    <script th:inline="javascript">
-      window['showFormDataset' + /*[[${rid}]]*/ 0] = /*[[${item.toDataset()}]]*/ null;
-      var showFormId = /*[[${'showForm' + rid}]]*/ null;
-      var showForm = document.getElementById(showFormId);
-      showForm.setAttribute('props-var', 'showFormDataset' + /*[[${rid}]]*/ 0);
+      <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+        th:id="${'attachments' + rid}">
+        <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
+          hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load"
+          class="d-none"></a>
+      </div>
+
+      <script th:inline="javascript">
+        window['showFormDataset' + /*[[${rid}]]*/ 0] = /*[[${item.toDataset()}]]*/ null;
+        var showFormId = /*[[${'showForm' + rid}]]*/ null;
+        var showForm = document.getElementById(showFormId);
+        showForm.setAttribute('props-var', 'showFormDataset' + /*[[${rid}]]*/ 0);
+      </script>
+    </div>
+    <script th:inline="javascript" defer>
+      htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
     </script>
-  </div>
-  <script th:inline="javascript" defer>
-    htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
-  </script>
+
+  </th:block>
 </div>
 
 </html>
