--- a/src/main/resources/templates/sbu/jsf/show.html
+++ b/src/main/resources/templates/sbu/jsf/show.html
@@ -1,50 +1,53 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5"
-  th:with="attachmentDialog=${attachmentDialog} ?: false, _historyBack=${_historyBack} ?: false, jsfTheme=${jsfTheme}, item=${__${@webModelAttributes.ITEM_NAME}__}, queryConfig=${__${@webModelAttributes.QUERY_CONFIG_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId}, backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}"
-  class="card">
-  <div class="card-header">
-    <button th:if="${_historyBack}" onclick="history.back()" type="button" class="me-auto btn-close"
-      aria-label="Close"></button>
-    <button th:unless="${_historyBack}"
-      hx:get="@{${!#strings.isEmpty(backPath) ? backPath : item.getBackPath(queryConfig)}(_ajaxTargetId=${ajaxTargetId}, _backTargetId=${backTargetId}, _backPath=${backPath})}"
-      hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
-      aria-label="Close"></button>
-    <a th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
-      hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
-      hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
-      data-bs-toggle="modal"
-      th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
-      class="pe-2 text-success hint--left">
-      <i class="fas fa-paperclip"></i>
-    </a>
-  </div>
-  <div class="card-body" th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
-    <react-form th:id="${'showForm' + rid}" th:action="@{${item.backPath}}" method="GET"
-      ajax:target="${ajaxTargetId}" disabled="true" th:attr="theme=${jsfTheme}">
-      <div></div>
-    </react-form>
-    <a class="btn btn-light"
-      hx:get="@{${!#strings.isEmpty(backPath) ? backPath : item.getBackPath(queryConfig)}(__${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${backTargetId}, __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__=${backPath})}"
-      hx:target="${'#' + backTargetId}" hx-ext="json-enc">
-      [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
+<div th:fragment="bs5" class="card" th:insert="~{sbu/jsf/block :: scope(~{:: th:block})}">
+  <th:block>
 
-    <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
-      th:id="${'attachments' + rid}">
-      <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
-        hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load" class="d-none"></a>
+    <div class="card-header">
+      <button th:if="${_historyBack}" onclick="history.back()" type="button"
+        class="me-auto btn-close" aria-label="Close"></button>
+      <button th:unless="${_historyBack}"
+        hx:get="@{${!#strings.isEmpty(backPath) ? backPath : item.getBackPath(queryConfig)}(_ajaxTargetId=${ajaxTargetId}, _backTargetId=${backTargetId}, _backPath=${backPath})}"
+        hx:target="${'#' + backTargetId}" hx-ext="json-enc" type="button" class="me-auto btn-close"
+        aria-label="Close"></button>
+      <a th:if="${attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+        hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${@webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE})}"
+        hx:target="${'#' + @webModelAttributes.MODEL_CONTENT_TARGET_ID_VALUE}" hx-ext="json-enc"
+        data-bs-toggle="modal"
+        th:attr="data-bs-target=${'#' + @webModelAttributes.MODEL_TARGET_ID_VALUE}, aria-label=${#messages.msgOrNull('sbu.attachment.title') ?: 'Attachments'}"
+        class="pe-2 text-success hint--left">
+        <i class="fas fa-paperclip"></i>
+      </a>
     </div>
+    <div class="card-body">
+      <react-form th:id="${'showForm' + rid}" th:action="@{${item.backPath}}" method="GET"
+        ajax:target="${ajaxTargetId}" disabled="true" th:attr="theme=${jsfTheme}">
+        <div></div>
+      </react-form>
+      <a class="btn btn-light"
+        hx:get="@{${!#strings.isEmpty(backPath) ? backPath : item.getBackPath(queryConfig)}(__${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${backTargetId}, __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__=${backPath})}"
+        hx:target="${'#' + backTargetId}" hx-ext="json-enc">
+        [[${#messages.msgOrNull('sbu.ui.return') ?: 'Return'}]]</a>
 
-    <script th:inline="javascript">
-      window['showFormDataset' + /*[[${rid}]]*/ 0] = /*[[${item.toDataset()}]]*/ null;
-      var showFormId = /*[[${'showForm' + rid}]]*/ null;
-      var showForm = document.getElementById(showFormId);
-      showForm.setAttribute('props-var', 'showFormDataset' + /*[[${rid}]]*/ 0);
+      <div th:if="${!attachmentDialog and @sbuHtml.isAttachmentSnapshotProvider(item)}"
+        th:id="${'attachments' + rid}">
+        <a hx:get="@{${item.joinPath('attachments')}(__${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${'attachments' + rid})}"
+          hx:target="${'#attachments' + rid}" hx-ext="json-enc" hx-trigger="load"
+          class="d-none"></a>
+      </div>
+
+      <script th:inline="javascript">
+        window['showFormDataset' + /*[[${rid}]]*/ 0] = /*[[${item.toDataset()}]]*/ null;
+        var showFormId = /*[[${'showForm' + rid}]]*/ null;
+        var showForm = document.getElementById(showFormId);
+        showForm.setAttribute('props-var', 'showFormDataset' + /*[[${rid}]]*/ 0);
+      </script>
+    </div>
+    <script th:inline="javascript" defer>
+      htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
     </script>
-  </div>
-  <script th:inline="javascript" defer>
-    htmx.process(document.getElementById(/*[[${ajaxTargetId}]]*/ null));
-  </script>
+
+  </th:block>
 </div>
 
 </html>
