Fix back and forth issue in content-editor & state-form-editor

--- a/src/main/resources/templates/sbu/fsm/content-editor.html
+++ b/src/main/resources/templates/sbu/fsm/content-editor.html
@@ -1,7 +1,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
-<div th:fragment="bs5"
-  th:with="_historyBack=${_historyBack} ?: false, user=${__${'@' + @webModelAttributes.USER_NAME}__}, fid=${(T(java.lang.Math).random() * 2147483647).intValue()}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, item=${__${@webModelAttributes.ITEM_NAME}__}, ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE}, backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId}, backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}">
+<div th:fragment="bs5" th:with="
+  _historyBack=${_historyBack} ?: false,
+  user=${__${'@' + @webModelAttributes.USER_NAME}__},
+  fid=${item.id},
+  saveonly=${saveonly},
+  saveonlybtntxt=${saveonlybtntxt},
+  item=${__${@webModelAttributes.ITEM_NAME}__},
+  ajaxTargetId=${__${@webModelAttributes.AJAX_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__ ?: @webModelAttributes.AJAX_TARGET_ID_VALUE},
+  backTargetId=${__${@webModelAttributes.BACK_TARGET_ID_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__ ?: ajaxTargetId}, 
+  backPath=${__${@webModelAttributes.BACK_PATH_NAME}__ ?: __${@webModelAttributes.FORWARDING_BACK_PATH_NAME}__}
+">
   <ul class="nav nav-tabs" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" data-bs-toggle="tab"
@@ -44,21 +53,28 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane fade show active" th:id="${'mainForm' + fid}" role="tabpanel">
-      <div th:if="user == null || user.canRead(item)"
-        th:replace="~{sbu/jsf/show-edit :: bs5(attachmentDialog=true, _historyBack=${_historyBack}, saveonly=${saveonly}, saveonlybtntxt=${saveonlybtntxt}, __${@webModelAttributes.ITEM_NAME}__=${item}, __${@webModelAttributes.AJAX_TARGET_ID_NAME}__=${ajaxTargetId}, __${@webModelAttributes.BACK_TARGET_ID_NAME}__=${backTargetId}, __${@webModelAttributes.BACK_PATH_NAME}__=${backPath})}">
+      <div th:if="user == null || user.canRead(item)" th:replace="~{sbu/jsf/show-edit-only :: bs5(
+          attachmentDialog=true,
+          _historyBack=true,
+          saveonly=${saveonly},
+          saveonlybtntxt=${saveonlybtntxt},
+          __${@webModelAttributes.ITEM_NAME}__=${item},
+          ajaxTargetId=${ajaxTargetId}
+        )}">
       </div>
     </div>
 
     <div
       th:each="formType,iter : ${item.phase.stateRecord.getViewableForms(item.phase.stateMachine)}"
       class="tab-pane fade" th:id="${'viewableForm' + fid + '_' + iter.index}" role="tabpanel">
-      <th:block th:with="rid=${(T(java.lang.Math).random() * 2147483647).intValue()}">
-        <div th:id="${'embedded' + rid}" class="pt-2">
-          <a hx:target="${'#embedded' + rid}"
-            hx:get="@{${item.joinPath('forms', formType)}(_historyBack=${_historyBack}, _ajaxTargetId=${'embedded' + rid}, _backTargetId=${ajaxTargetId})}"
-            hx-ext="json-enc" hx-trigger="load"></a>
-        </div>
-      </th:block>
+      <div th:id="${'embedded' + fid + '_' + iter.index}" class="pt-2">
+        <a hx:target="${'#embedded' + fid + '_' + iter.index}" hx-ext="json-enc" hx-trigger="load"
+          hx:get="@{${item.joinPath('forms', formType)}(
+            _historyBack=${_historyBack},
+            _ajaxTargetId=${'embedded' + fid + '_' + iter.index},
+            _backTargetId=${_ajaxTargetId}
+          )}"></a>
+      </div>
     </div>
 
     <div
@@ -69,7 +85,7 @@
         <th:block th:each="formBranchData : ${formTypeData.value}">
           <a class="list-group-item" data-bs-toggle="modal" data-bs-target="#stateFormModal"
             hx-target="#modelForm"
-            hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}(_historyBack=${_historyBack}, __${@webModelAttributes.FORWARDING_AJAX_TARGET_ID_NAME}__=${'embedded' + rid}, __${@webModelAttributes.FORWARDING_BACK_TARGET_ID_NAME}__=${ajaxTargetId})}"
+            hx:get="@{${item.joinPath('forms', formTypeData.key, 'formId', formBranchData.value)}}"
             hx-ext="json-enc">
             [[${formBranchData.key}]]
           </a>
@@ -78,7 +94,7 @@
 
       <div class="modal fade" id="stateFormModal" tabindex="-1"
         aria-labelledby="stateFormModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-scrollable modal-lg modal-fullscreen-lg-down">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="stateFormModalLabel">State Form</h5>
